@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,15 +27,17 @@
  * ---------------------
  * PaintScaleLegend.java
  * ---------------------
- * (C) Copyright 2007, 2008, by Object Refinery Limited.
+ * (C) Copyright 2007-2009, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
- * Contributor(s):   -;
+ * Contributor(s):   Peter Kolb - see patch 2686872;
  *
  * Changes
  * -------
  * 22-Jan-2007 : Version 1 (DG);
  * 18-Jun-2008 : Fixed bug drawing scale with log axis (DG);
+ * 16-Apr-2009 : Patch 2686872 implementing AxisChangeListener, and fix for
+ *               ignored stripOutlineVisible flag (DG);
  *
  */
 
@@ -56,6 +58,8 @@ import org.jfree.chart.axis.AxisSpace;
 import org.jfree.chart.axis.ValueAxis;
 import org.jfree.chart.block.LengthConstraintType;
 import org.jfree.chart.block.RectangleConstraint;
+import org.jfree.chart.event.AxisChangeEvent;
+import org.jfree.chart.event.AxisChangeListener;
 import org.jfree.chart.event.TitleChangeEvent;
 import org.jfree.chart.plot.Plot;
 import org.jfree.chart.plot.PlotOrientation;
@@ -73,7 +77,8 @@ import org.jfree.util.PublicCloneable;
  *
  * @since 1.0.4
  */
-public class PaintScaleLegend extends Title implements PublicCloneable {
+public class PaintScaleLegend extends Title implements AxisChangeListener,
+        PublicCloneable {
 
     /** For serialization. */
     static final long serialVersionUID = -1365146490993227503L;
@@ -130,6 +135,7 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
         }
         this.scale = scale;
         this.axis = axis;
+        this.axis.addChangeListener(this);
         this.axisLocation = AxisLocation.BOTTOM_OR_LEFT;
         this.axisOffset = 0.0;
         this.axis.setRange(scale.getLowerBound(), scale.getUpperBound());
@@ -191,7 +197,9 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
         if (axis == null) {
             throw new IllegalArgumentException("Null 'axis' argument.");
         }
+        this.axis.removeChangeListener(this);
         this.axis = axis;
+        this.axis.addChangeListener(this);
         notifyListeners(new TitleChangeEvent(this));
     }
 
@@ -396,6 +404,20 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
     }
 
     /**
+     * Receives notification of an axis change event and responds by firing
+     * a title change event.
+     *
+     * @param event  the event.
+     *
+     * @since 1.0.13
+     */
+    public void axisChanged(AxisChangeEvent event) {
+        if (this.axis == event.getAxis()) {
+            notifyListeners(new TitleChangeEvent(this));
+        }
+    }
+
+    /**
      * Arranges the contents of the block, within the given constraints, and
      * returns the block size.
      *
@@ -523,7 +545,6 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
         double increment = this.axis.getRange().getLength() / this.subdivisions;
         Rectangle2D r = new Rectangle2D.Double();
 
-
         if (RectangleEdge.isTopOrBottom(getPosition())) {
             RectangleEdge axisEdge = Plot.resolveRangeAxisLocation(
                     this.axisLocation, PlotOrientation.HORIZONTAL);
@@ -541,11 +562,13 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
                     g2.setPaint(p);
                     g2.fill(r);
                 }
-                g2.setPaint(this.stripOutlinePaint);
-                g2.setStroke(this.stripOutlineStroke);
-                g2.draw(new Rectangle2D.Double(target.getMinX(),
-                        target.getMaxY() - this.stripWidth, target.getWidth(),
-                        this.stripWidth));
+                if (isStripOutlineVisible()) {
+                    g2.setPaint(this.stripOutlinePaint);
+                    g2.setStroke(this.stripOutlineStroke);
+                    g2.draw(new Rectangle2D.Double(target.getMinX(),
+                            target.getMaxY() - this.stripWidth,
+                            target.getWidth(), this.stripWidth));
+                }
                 this.axis.draw(g2, target.getMaxY() - this.stripWidth
                         - this.axisOffset, target, target, RectangleEdge.TOP,
                         null);
@@ -564,10 +587,13 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
                     g2.setPaint(p);
                     g2.fill(r);
                 }
-                g2.setPaint(this.stripOutlinePaint);
-                g2.setStroke(this.stripOutlineStroke);
-                g2.draw(new Rectangle2D.Double(target.getMinX(),
-                        target.getMinY(), target.getWidth(), this.stripWidth));
+                if (isStripOutlineVisible()) {
+                    g2.setPaint(this.stripOutlinePaint);
+                    g2.setStroke(this.stripOutlineStroke);
+                    g2.draw(new Rectangle2D.Double(target.getMinX(),
+                            target.getMinY(), target.getWidth(),
+                            this.stripWidth));
+                }
                 this.axis.draw(g2, target.getMinY() + this.stripWidth
                         + this.axisOffset, target, target,
                         RectangleEdge.BOTTOM, null);
@@ -590,11 +616,13 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
                     g2.setPaint(p);
                     g2.fill(r);
                 }
-                g2.setPaint(this.stripOutlinePaint);
-                g2.setStroke(this.stripOutlineStroke);
-                g2.draw(new Rectangle2D.Double(target.getMaxX()
-                        - this.stripWidth, target.getMinY(), this.stripWidth,
-                        target.getHeight()));
+                if (isStripOutlineVisible()) {
+                    g2.setPaint(this.stripOutlinePaint);
+                    g2.setStroke(this.stripOutlineStroke);
+                    g2.draw(new Rectangle2D.Double(target.getMaxX()
+                            - this.stripWidth, target.getMinY(), this.stripWidth,
+                            target.getHeight()));
+                }
                 this.axis.draw(g2, target.getMaxX() - this.stripWidth
                         - this.axisOffset, target, target, RectangleEdge.LEFT,
                         null);
@@ -613,10 +641,13 @@ public class PaintScaleLegend extends Title implements PublicCloneable {
                     g2.setPaint(p);
                     g2.fill(r);
                 }
-                g2.setPaint(this.stripOutlinePaint);
-                g2.setStroke(this.stripOutlineStroke);
-                g2.draw(new Rectangle2D.Double(target.getMinX(),
-                        target.getMinY(), this.stripWidth, target.getHeight()));
+                if (isStripOutlineVisible()) {
+                    g2.setPaint(this.stripOutlinePaint);
+                    g2.setStroke(this.stripOutlineStroke);
+                    g2.draw(new Rectangle2D.Double(target.getMinX(),
+                            target.getMinY(), this.stripWidth,
+                            target.getHeight()));
+                }
                 this.axis.draw(g2, target.getMinX() + this.stripWidth
                         + this.axisOffset, target, target, RectangleEdge.RIGHT,
                         null);
